cmake_minimum_required(VERSION 3.2)

project(ImGui)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Lib)
set(CMAKE_CXX_STANDARD 14 CONFIG REQUIRED)
include_directories(${CMAKE_SOURCE_DIR}/Include dep)
file(GLOB libSRC config_depends *.c *.cpp *.h)
IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    set(LIB_PATH ${CMAKE_SOURCE_DIR}/Lib/lib-mingw64)
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    set(LIB_PATH ${CMAKE_SOURCE_DIR}/Lib/lib-vc2022)
ELSE()
    message(FATAL_ERROR "There is No libglfw3 support for ${CMAKE_CXX_COMPILER_ID}")
ENDIF()
link_directories(${LIB_PATH})
add_library(${PROJECT_NAME} ${libSRC})
target_include_directories(${PROJECT_NAME} PUBLIC dep)
target_link_libraries(${PROJECT_NAME} PUBLIC glfw3)

